--- a/map-reduce/build.gradle
+++ b/map-reduce/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
 
     testCompile project(":morphlines-core").sourceSets.test.output
+    testCompile group: 'org.kitesdk', name: 'kite-morphlines-core', version: MORPHLINES_VERSION, classifier: "tests"
     testCompile group: "org.apache.solr", name: "solr-test-framework", version: SOLR_VERSION
     testCompile group: 'org.apache.mrunit', name: 'mrunit', version: '1.0.0', classifier: "hadoop2"
 
