--- a/map-reduce/build.gradle
+++ b/map-reduce/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile group: "org.apache.solr", name: "solr-solrj", version: SOLR_VERSION
     compile group: "org.apache.solr", name: "solr-core", version: SOLR_VERSION
 
+    compile group: 'com.riskiq.mapreduce', name: 'hadoop-io', version: '1.0.0'
     compile group: 'org.apache.hadoop', name: 'hadoop-common', version: HADOOP_VERSION
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: HADOOP_VERSION
 
@@ -29,4 +30,5 @@ dependencies {
     testCompile "org.bouncycastle:bcpkix-jdk15on:1.47"
     testCompile group: 'rome', name: 'rome', version: '1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
 }
