--- a/morphlines-core/build.gradle
+++ b/morphlines-core/build.gradle
@@ -15,3 +15,8 @@ dependencies {
     testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+
+test {
+    systemProperty "test.solr.allowed.securerandom", "NativePRNG"
+}
